Fix header formatting in SQL Injection tutorial

--- a/6.3-TUTORIAL.md
+++ b/6.3-TUTORIAL.md
@@ -1,4 +1,4 @@
-####DVWA — SQL Injection Tutorial
+###DVWA — SQL Injection Tutorial
 ###Author: Alassane Camara
 ###Course: CSN190
 ###Assignment: 6.3 — Work with Your GitHub Software and Create Tutorial
