Change headings to H2 in SQL Injection Tutorial
Updated headings from H3 to H2 for better visibility.

--- a/6.3-TUTORIAL.md
+++ b/6.3-TUTORIAL.md
@@ -1,8 +1,8 @@
-###DVWA — SQL Injection Tutorial
-###Author: Alassane Camara
-###Course: CSN190
-###Assignment: 6.3 — Work with Your GitHub Software and Create Tutorial
-###Date: 11-11-25
+##DVWA — SQL Injection Tutorial
+##Author: Alassane Camara
+##Course: CSN190
+##Assignment: 6.3 — Work with Your GitHub Software and Create Tutorial
+##Date: 11-11-25
 ##1. Introduction
 This tutorial demonstrates a basic SQL injection against the Damn Vulnerable Web Application. We will run DVWA locally using Docker, set the security level to Low, submit a simple SQL injection payload “1' OR '1'='1” into the SQL Injection page, and observe the application return multiple database rows. This shows how un-sanitized user inputs can allow attackers to bypass query filters and extract data, an essential concept in web security learning.
 ##2. Prerequisites
